--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
              <div class="presentation" >
                  <h1 data-aos="fade-right" data-aos-duration="2000">Brève présentation :</h1>
-                 <p data-aos="fade-right" data-aos-duration="1500">Je m'appelle Léo LOMBARDINI et je suis developpeur HTML/CSS. Étudiant en informatique, je me passione depuis mon plus jeune âge à la programmation. Je serai répondre à vos attentes et vous fabriquera le site internet de vos rêves pour vous ou votre entreprise. </p>
+                 <p data-aos="fade-right" data-aos-duration="1500">Je m'appelle Léo LOMBARDINI et je suis developpeur HTML/CSS. Étudiant en informatique, je me passione depuis mon plus jeune âge à la programmation. Je saurai répondre à vos attentes et vous fabriquerai le site internet de vos rêves pour vous ou votre entreprise. </p>
                  <a href="#" data-aos="fade-right" data-aos-duration="1000">En apprendre plus</a>
             </div>
              <div class="img-presentation">
@@ -72,7 +72,7 @@
              </div>
              <div class="explication">
                  <h1 data-aos="fade-right" data-aos-duration="500">Explication : </h1>
-                 <p data-aos="fade-right" data-aos-duration="1000">HTML et CSS sont de languages de balise servant à créer des sites web complet, il existe aussi d'autre language de programmation comme le Javascript qui est aussi utiliser pour le developpement web. Le but du responsive-design est de rendre compatible votre site avec n'importe quelle format d'ecran (smartphone, tablette,ordinateur). </p>
+                 <p data-aos="fade-right" data-aos-duration="1000">HTML et CSS sont deux languages de balise servant à créer des sites web complets, il existe aussi d'autres languages de programmation comme le Javascript qui est aussi utilisé pour le developpement web. Le but du responsive-design est de rendre compatible votre site avec n'importe quel format d'ecran (smartphone, tablette,ordinateur). </p>
              </div>
          </div>
         </div>
@@ -80,7 +80,7 @@
          <div class="sec3">
         <div class="text" data-aos="zoom-in" data-aos-duration="1000" >
                  <h1>Mes projects : </h1>
-                 <p>Les sites internet que je concoit sont très diversifié mais une seule chose les rassemble; ma passion en effet c'est pour cela que je donne le meilleur de moi même durant la conception d'un site et aussi durant sa maitenance. </p>
+                 <p>Les sites internet que je concois sont très diversifié mais une seule chose les rassemble; ma passion en effet c'est pour cela que je donne le meilleur de moi même durant la conception d'un site et aussi durant sa maitenance. </p>
              </div>
              <div class="project-container">
                  <div class="project-card" data-aos="flip-left" data-aos-duration="1500">
@@ -115,7 +115,7 @@
                   </header>
                   <ul class="plan-features">
                     <li><i class="ion-android-remove"> </i>Fonction de base</li>
-                    <li><i class="ion-android-remove"> </i>Hebrgement 12mois</li>
+                    <li><i class="ion-android-remove"> </i>Hebergement 12mois</li>
                     <li><i class="ion-android-remove"> </i>Maintenance chaque mois</li>
                     <li><i class="ion-android-remove"> </i>Boite Mail</li>
                     <li><i class="ion-android-remove"> </i>4 pages maximum</li>
@@ -131,7 +131,7 @@
                     <div class="plan-cost"><span class="plan-price">450€</span></div>
                   </header>
                   <ul class="plan-features">
-                    <li><i class="ion-android-remove"> </i>Fonction anvancées</li>
+                    <li><i class="ion-android-remove"> </i>Fonction avancées</li>
                     <li><i class="ion-android-remove"> </i>Animations</li>
                     <li><i class="ion-android-remove"> </i>Hebergement 12mois</li>
                     <li><i class="ion-android-remove"> </i>Maintenance chaque mois</li>
@@ -150,7 +150,7 @@
                     <div class="plan-cost"><span class="plan-price">599€</span></div>
                   </header>
                   <ul class="plan-features">
-                    <li><i class="ion-android-remove"> </i>Fonctions anvancées</li>
+                    <li><i class="ion-android-remove"> </i>Fonctions avancées</li>
                     <li><i class="ion-android-remove"> </i>Animations</li>
                     <li><i class="ion-android-remove"> </i>E-commerce</li>
                     <li><i class="ion-android-remove"> </i>Interface</li>
